[package]
name = "hev3-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Happy Eyeballs Version 3 implementation in Rust"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
tracing = "0.1"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1.0"
quinn = "0.11"
rand = "0.9.2"