[package]
name = "hev3-rust"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Klein <kevin.klein@student.hpi.uni-potsdam.de>"]
description = "Happy Eyeballs Version 3 implementation in Rust"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"
log = "0.4.28"
thiserror = "1.0"
tokio-rustls = "0.26.3"
rustls = "0.23.31"
webpki-roots = "1.0"
quinn = "0.11.9"
rand = "0.9.2"
pnet = "0.35.0"
