[package]
name = "hev3-example"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A simple cli example of the Happy Eyeballs Version 3 library"

[dependencies]
hev3-rust = { path = "../.." } # TODO update when on github or released on crates.io
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
env_logger = "0.11"
